fixed the jumping page

--- a/src/app/shared/header/header.component.sass
+++ b/src/app/shared/header/header.component.sass
@@ -4,6 +4,7 @@
     font-weight: bolder
     width: 100%
     z-index: 1000
+    height: 150px
 
     h1
         text-align: center
